# Android_NDK

./: CMakeLists.txt  Constants.h  NativeSecrets.kt  README.md  native-lib.cpp  security_utils.cpp  security_utils.h  whitelist_utils.cpp  whitelist_utils.h
